# rag

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-dedicated-text-embedder-over-clip.md  0002-full-ai-based-layoutparser-parsing.md
rag/: ai_parser.py  app.py  chunker.py  cli.py  config.py  embedder.py  factory.py  generator.py  ingestion.py  layout_detector.py  metadata_store.py  models.py  parser.py  pipeline.py  prompt_builder.py  retriever.py  vector_index.py
scripts/: ingest_ai.py  inspect_ai_parser.py  inspect_chunks.py  query_ai.py
tests/: fakes.py  test_ai_parser.py  test_chunker.py  test_ingestion.py  test_metadata_store.py  test_pipeline_end_to_end.py  test_prompt_builder.py  test_retriever.py  test_vector_index.py
