[project]
name = "local-rag"
version = "0.1.0"
description = "Local, fully-offline RAG (ChatPDF) pipeline over a documents folder"
requires-python = ">=3.12"
dependencies = [
    "pymupdf",
    "faiss-cpu",
    "numpy",
    "tiktoken",
]

[project.optional-dependencies]
# Real-run adapters and UI; not needed for the test suite (which uses fakes).
runtime = [
    "ollama",
    "streamlit",
]
dev = [
    "pytest",
]
# AI-based parser (Slice 3 / ADR-0002): Docling layout+OCR, offline on CPU. Heavy; opt in with
# RAG_PARSER=ai. Stands in for the lecture's LayoutParser (no Apple-Silicon Detectron2 wheels).
ai = [
    "docling",
]

[project.scripts]
rag = "rag.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
